--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
-<div class="paragraph">
-    github pages demo
-    <br>
-    <br>
-    Nothing Special Here...
+<div>
+    <h1>Hello World from github pages!</h1>
+    <img src="/static/earth.png" alt="Earth">
 </div>
 </body>
 </html>
