--- a/src/main/resources/templates/styles.css
+++ b/src/main/resources/templates/styles.css
@@ -1,34 +1,10 @@
-h1 {
-    color: red;
-    background-color: blueviolet;
+body {
+    margin: 0;
+    padding: 0;
     text-align: center;
 }
 
-h2 {
-    font-size: 66px;
-    font-family: Arial;
-    text-decoration: underline;
+img {
+    width: 40em;
+    max-width: 90%;
 }
-
-h3 {
-    color: blue;
-    border: 2px;
-}
-
-h4 {
-    box-shadow: 3px 3px 5px #888888;
-}
-
-.paragraph {
-    color: #2E86C1;
-    background-color: #FAD02E;
-    padding: 15px;
-    border-radius: 8px;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 24px;
-    font-weight: bold;
-    box-shadow: 2px 2px 5px #888888;
-}
-
-
